--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         width = 200px height 200px>
         <img src="https://www.sanrio.com/cdn/shop/articles/Sanrio_Social_Blog_CN_2340x1280_310e5718-bbc9-452e-a229-7d04d3531bfb_600x.png?v=1602618068" alt=""
         width = 250px height 250px>
+
+        <p id ="special">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem ea illum corrupti omnis odit? Sint quae laboriosam aliquid. Alias obcaecati accusamus corrupti reprehenderit commodi amet ipsum temporibus fuga provident perferendis.</p>
+
+        <p id ="special2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta debitis explicabo cupiditate eius enim? Explicabo suscipit neque vel expedita id dolorum facilis sit illum, et similique accusamus maiores impedit nesciunt!</p>
+        <hr>
+        <p id="special3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, expedita! Harum, qui.</p>
     </body>
 </html>
