--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <p id ="special">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem ea illum corrupti omnis odit? Sint quae laboriosam aliquid. Alias obcaecati accusamus corrupti reprehenderit commodi amet ipsum temporibus fuga provident perferendis.</p>
 
         <p id ="special2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta debitis explicabo cupiditate eius enim? Explicabo suscipit neque vel expedita id dolorum facilis sit illum, et similique accusamus maiores impedit nesciunt!</p>
-        <hr>
+        <hr id = "special4">
         <p id="special3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, expedita! Harum, qui.</p>
+        <hr>
     </body>
 </html>
