--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
         <hr id = "special4">
         <p id="special3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, expedita! Harum, qui.</p>
         <hr>
+        <!-- ordered list -->
+        <ol>
+            <li>first</li>
+            <li>second</li>
+            <li>third</li>
+        </ol>
+        <!-- end ordered list -->
+
+        <!-- unordered list -->
+    <ul>
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+    </ul>
+        <!-- end unordered list -->
+        <ol>
+            <li>content</li>
+            <li>content</li>
+            <li>content</li>
+            <li>content</li>
+        </ol>
     </body>
 </html>
